-hate options appeared twice  -tagged/untagged tab  -greying behind tagged image bug fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,11 +8,6 @@ a {
   color: #00B7FF;
 }
 
-.sidebar {
-    position: fixed;
-    right: 0px;
-}
-
 #images-container {
     display: flex;
     flex-wrap: wrap;
@@ -52,7 +47,8 @@ a {
 .sidebar {
     position: fixed;
     overflow: scroll;
-    height: 100%;
+    height: calc(100% - 45px);
+    right: 0px;
 }
 .hide {
     display: none;
@@ -130,9 +126,9 @@ button {
 .popup {
     position: fixed;
     left: 0px;
-    top: 0px;
+    top: 45px;
     width: 66.6666%;
-    height: 100%;
+    height: calc(100% - 45px);
     display: flex;
     align-items: center;
     justify-content: center;
